--- a/Website 6V/page2.html
+++ b/Website 6V/page2.html
@@ -11,29 +11,31 @@
 </head>
 <body>
 
-<div class="p-4 bg-primary text-white rounded"> <!-- Header -->
+<div class="p-4 bg-succes text-white rounded"> <!-- Header -->
 	<h1>Foto's</h1>
 </div>
 
 <div class="container-fluid">
-	<nav class="navbar navbar-expand-sm bg-light"> <!-- 'Navigatiebar' voor de pagina's --> 
+	<nav class="navbar navbar-expand-sm nav-kleur rounded"> <!-- 'Navigatiebar' voor de pagina's --> 
 				<!-- Links -->
 			<ul class="navbar-nav">
-				<button class="btn btn-block btn-primary">
+				<button class="btn btn-block btn-succes">
 					<a href="index.html" class="text-light text-decoration-none"> <i class="fa-solid fa-house text-light"></i>Home
 				</button><!-- home button -->
 				<li class="nav-item">
-					<a class="nav-link" href="page1.html">Over mij</a>
+					<a class="nav-link text-light" href="page1.html">Over mij</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link text-dark" href="page2.html">Foto's</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="page3.html">Link 3</a>
+					<a class="nav-link text-light" href="page3.html">Link 3</a>
 				</li>
 			</ul>
 	</nav>
 </div>
+
+
 
 <div class="row-grid">
 	<div class="column-grid">
@@ -70,6 +72,13 @@
 	</div>		
 	
 </div>
+
+<div class="row">
+	<div class="mt-4 p-5 bg-succes footer rounded col-12">
+		<h1>Footer</h1>
+	  </div>
+</div>
+
 
 
 </body>
