--- a/Website 6V/index.html
+++ b/Website 6V/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Template website</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -9,31 +8,41 @@
   <script src="https://kit.fontawesome.com/56537501d7.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="index.css">
   <script src="index.js"></script>
+  <title>Keuzeopdracht 6V</title>
 </head>
 <body>
 
-<div class="p-4 bg-primary text-white rounded"> <!-- Header -->
+<div class="p-4 bg-succes text-white rounded"> <!-- Header -->
   <h1>Home</h1>
 </div> 
 
-<nav class="navbar navbar-expand-sm bg-light"> <!-- 'Navigatiebar' voor de pagina's --> 
+<nav class="navbar navbar-expand-sm nav-kleur rounded"> <!-- 'Navigatiebar' voor de pagina's --> 
   <div class="container-fluid">
     <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="page1.html">Over mij <i class="fa-solid fa-angle-down"></i>
-        </li></a>
-    
+        <a class="nav-link text-light" href="page1.html">Over mij</a>
+        </li>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="page2.html">Link 2</a>
+        <a class="nav-link text-light" href="page2.html">Link 2</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="page3.html">Link 3</a>
+        <a class="nav-link text-light" href="page3.html">Link 3</a>
       </li>
     </ul>
   </div>
 </nav>
+
+<div class="row">
+  <div class="container">
+    <img src="images/landschap.jpg" style="width:100%">
+      <div class="text-foto">
+        <p>TEKST</p>
+        <p>TEKST</p>
+      </div>
+  </div>
+</div>
 
 <div class="row">
   <div class="col-3">
@@ -93,8 +102,15 @@
   <div class="col-3">
     <p>TEKST</p>
   </div>
-
 </div>
+
+
+<div class="row">
+	<div class="mt-4 p-5 bg-succes footer rounded col-12">
+		<h1>Footer</h1>
+	  </div>
+</div>
+
 
 </body>
 </html>
