--- a/Website 6V/page1.html
+++ b/Website 6V/page1.html
@@ -4,38 +4,53 @@
   <title>Template website</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="index.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://kit.fontawesome.com/56537501d7.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
-<div class="p-4 bg-primary text-white rounded"> <!-- Header -->
+<div class="p-4 bg-succes text-white rounded"> <!-- Header -->
 	<h1>Over mij</h1>
 </div> 
 
 
 <div class="container-fluid">
-	<nav class="navbar navbar-expand-sm bg-light"> <!-- 'Navigatiebar' voor de pagina's --> 
+	<nav class="navbar navbar-expand-sm nav-kleur rounded"> <!-- 'Navigatiebar' voor de pagina's --> 
 				<!-- Links -->
 			<ul class="navbar-nav">
-				<button class="btn btn-block btn-primary">
+				<button class="btn btn-block btn-succes">
 					<a href="index.html" class="text-light text-decoration-none"> <i class="fa-solid fa-house text-light"></i>Home
 				</button> <!-- home button -->
 				<li class="nav-item">
-					<a class="nav-link" href="page1.html">Over mij</a>
+					<a class="nav-link text-dark" href="page1.html">Over mij</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="page2.html">Link 2</a>
+					<a class="nav-link text-light" href="page2.html">Link 2</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="page3.html">Link 3</a>
+					<a class="nav-link text-light" href="page3.html">Link 3</a>
 				</li>
 			</ul>
 	</nav>
 </div>
+<div class="row"> 
+	<div class="col-9">TEKST</div>
+	<div class="card col-3" style="width:300px">
+		<img class="card-img-top rounded" src="images/Abe.jpg">
+		<div class="card-body">
+		<h4 class="card-title text-dark">John Doe</h4>
+		<p class="card-text text-dark">Some example text.</p>
+		<a href="#" class="btn btn-primary">See Profile</a>
+		</div>
+	</div>
+</div>
+<div class="row">
+	<div class="mt-4 p-5 bg-succes footer rounded col-12">
+		<h1>Footer</h1>
+	  </div>
+</div>
 
-<img  src="images/vogel.jpg" class="float-end" width="300">
 	
 </body>
